# Snake

./: README.md
client/: connection.py  main.py  pyproject.toml  snake_grid.py
client/game/: __init__.py  apple.py  cache.py  fruit.py  menu.py  player.py  snake.py  visuals.py
server/: Dockerfile  docker-compose.yaml  go.mod  go.sum
server/cache/: cache.go
server/cmd/: main.go
server/game/: game.go
server/transport/: transport.go
