[tool.poetry]
name = "client"
version = "0.1.0"
description = "Dependency Management for the Snake Client"
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
